# pixelart-controller

./: .gitignore  BUILDING.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
python-backend/: backend.spec  build.py  requirements.txt
python-backend/src/: ble_manager.py  led_controller.py  main.py
src/: App.css  App.tsx  App.tsx.backup  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Card.tsx  Header.tsx
src/components/cards/: ConnectionCard.tsx  EditorCard.tsx  ModesCard.tsx  SettingsCard.tsx
src/context/: AppContext.tsx
src/services/: api.ts
src/types/: led-panel.ts
