[package]
name = "pixelart-controller"
version = "0.1.0"
description = "Desktop application for controlling iPixel Color LED panels"
authors = ["Vincent"]
edition = "2021"
license = "MIT"

[lib]
name = "pixelart_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ureq = "2.9"

